Bug#56185 cannot use cpu id >255 in LockExecuteThreadToCPU  - Use SparseBitmask for storing ids of the CPUS to lock to, allowing   id 0-65535 to be used. - Move the warning about to few CPUs to lock    into the function that assigns the CPUs and knows    if it is a problem or not.  - Print a message desrcibing the strategy used to assign threads    to CPUs  - Print warning if ndbd fails to parse the bitmask spec.